--- a/default.hbs
+++ b/default.hbs
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{!-- Styles --}}
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{asset "styles/main.css"}}"/>
 
     {{!-- This tag outputs SEO meta+structured data and other important settings --}}
