--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,6 +1,6 @@
- <ul class="u-unstyled menu" itemscope itemtype="http://schema.org/SiteNavigationElement" role="menu">
+ <ul class="main-menu u-unstyled menu" itemscope itemtype="http://schema.org/SiteNavigationElement" role="menu">
 {{#foreach navigation}}
-    <li class="menu__item" itemprop="name" role="menuitem">
+    <li class="menu-item" itemprop="name" role="menuitem">
         <a href="{{url absolute="true"}}" class="u-block {{#if current}}active{{/if}}" {{^is "amp"}}itemprop="url"{{/is}}>{{label}}</a>
     </li>
 {{/foreach}}
