starter for dev

--- a/src/scss/abstracts/_placeholders.scss
+++ b/src/scss/abstracts/_placeholders.scss
@@ -1,11 +1,30 @@
-%primary-font {
-  font-family: $primary-font;
+%primary-font
+{
+    font-family: $primary-font;
 }
 
 // flexbox
-%flex { display: flex }
-%flex-align-items-center { align-items: center }
-%flex-direction-column { flex-direction: column }
-%flex-direction-row { flex-direction: row }
-%flex-direction-wrap { flex-direction: wrap }
-%flex-justify-content-center { justify-content: center }
+%flex
+{
+    display: flex;
+}
+%flex-align-items-center
+{
+    align-items: center;
+}
+%flex-direction-column
+{
+    flex-direction: column;
+}
+%flex-direction-row
+{
+    flex-direction: row;
+}
+%flex-direction-wrap
+{
+    flex-direction: wrap;
+}
+%flex-justify-content-center
+{
+    justify-content: center;
+}
