--- a/index.hbs
+++ b/index.hbs
@@ -4,50 +4,51 @@ into the {body} of the default.hbs template --}}
 
 <div class="content-wrap">
     <div class="content">
-
-        {{!-- First Post Large in Home Page --}}
-        <div class="rimary-home-left">
-            {{#foreach posts limit="1"}}
-                <article class="primary-post">
-                    <h1 class="primary-post-title"><a href="{{url}}">{{title}}</a></h1>
-                    {{!-- Primary Tag --}}
-                    <div class="u-meta">
-                        <div class="u-meta-byline">
-                            {{#if primary_tag}}{{#primary_tag}}<span class="u-meta-tag"><a href="{{url}}" aria-label="{{name}}">{{name}}</a></span>{{/primary_tag}}{{/if}}
+        <div class="rimay-paway">
+            {{!-- First Post Large in Home Page --}}
+            <div class="rimay-paway-left">
+                {{#foreach posts limit="1"}}
+                    <article class="primary-post">
+                        <h1 class="primary-post-title"><a href="{{url}}">{{title}}</a></h1>
+                        {{!-- Primary Tag --}}
+                        <div class="u-meta">
+                            <div class="u-meta-byline">
+                                {{#if primary_tag}}{{#primary_tag}}<span class="u-meta-tag"><a class="u-colorHoverPrimary u-colorInherit" href="{{url}}" aria-label="{{name}}">{{name}}</a></span>{{/primary_tag}}{{/if}}
+                            </div>
                         </div>
-                    </div>
 
-                    {{!-- Image --}}
-                    <figure class="primary-post-figure">
-                        {{#if feature_image}}
-                            <img class="primary-post-img u-absolute0 u-image u-block lazyload"
-                                src="{{img_url feature_image size="m"}}"
-                                srcset="{{img_url feature_image size="xxs"}}"
-                                data-srcset="{{img_url feature_image size="s"}} 300w,{{img_url feature_image size="m"}} 600w"
-                                data-sizes="(max-width: 1000px) 400px, 600px"
-                                alt="{{title}}"
-                            />
-                        {{else}}
-                            <div class="u-absolute0 u-bgCover u-block" style="background-image:url({{asset "images/not-image.jpg"}})"></div>
-                        {{/if}}
-                    </figure>
-                </article>
-            {{/foreach}}
-        </div>
+                        {{!-- Image --}}
+                        <figure class="primary-post-figure">
+                            {{#if feature_image}}
+                                <img class="primary-post-img u-absolute0 u-image u-block lazyload"
+                                    src="{{img_url feature_image size="m"}}"
+                                    srcset="{{img_url feature_image size="xxs"}}"
+                                    data-srcset="{{img_url feature_image size="s"}} 300w,{{img_url feature_image size="m"}} 600w"
+                                    data-sizes="(max-width: 1000px) 400px, 600px"
+                                    alt="{{title}}"
+                                />
+                            {{else}}
+                                <div class="u-absolute0 u-bgCover u-block" style="background-image:url({{asset "images/not-image.jpg"}})"></div>
+                            {{/if}}
+                        </figure>
+                    </article>
+                {{/foreach}}
+            </div>
 
-        {{!-- Featured Post in Home Page --}}
-        <div class="rimay-home-right">
-             {{#foreach posts from="2" to="5"}}
-                <article class="mini-post">
-                    <h3 class="mini-post-title"><a href="{{url}}">{{title}}</a></h3>
-                    {{!-- Primary Tag --}}
-                    <div class="u-meta">
-                        <div class="u-meta-byline">
-                            {{#if primary_tag}}{{#primary_tag}}<span class="u-meta-tag"><a href="{{url}}" aria-label="{{name}}">{{name}}</a></span>{{/primary_tag}}{{/if}}
+            {{!-- Featured Post in Home Page --}}
+            <div class="rimay-paway-right">
+                {{#foreach posts from="2" to="5"}}
+                    <article class="mini-post">
+                        <h3 class="mini-post-title"><a href="{{url}}">{{title}}</a></h3>
+                        {{!-- Primary Tag --}}
+                        <div class="u-meta">
+                            <div class="u-meta-byline">
+                                {{#if primary_tag}}{{#primary_tag}}<span class="u-meta-tag"><a href="{{url}}" aria-label="{{name}}">{{name}}</a></span>{{/primary_tag}}{{/if}}
+                            </div>
                         </div>
-                    </div>
-                </article>
-             {{/foreach}}
+                    </article>
+                {{/foreach}}
+            </div>
         </div>
     </div>
 </div>
