--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -1,51 +1,95 @@
-*, *::before, *::after {
-  box-sizing: border-box;
+*,
+*::before,
+*::after
+{
+    box-sizing: border-box;
 }
 
-html {
-  box-sizing: border-box;
-  text-rendering: optimizeLegibility;
-  // font-size: $font-size-root;
-  font-size: 16px;
+html
+{
+    // font-size: $font-size-root;
+    font-size: 16px;
+
+    box-sizing: border-box;
+
+    text-rendering: optimizeLegibility;
 }
 
-body {
-  @extend %primary-font;
-  // font-family: $primary-font;
-  // color: $primary-text-color;
-  // font-size: $font-size-base;
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: 0;
-  line-height: 1.4;
-  margin: 0 auto;
-  overflow-x: hidden;
+body
+{
+    font-weight: 400;
+    // font-family: $primary-font;
+    // color: $primary-text-color;
+    // font-size: $font-size-base;
+    font-style: normal;
+    line-height: 1.4;
+
+    overflow-x: hidden;
+
+    margin: 0 auto;
+
+    letter-spacing: 0;
+
+    @extend %primary-font;
 }
 
-li a, p a {
-  color: $primary-color;
-  border-bottom: 1px solid transparent;
-  transition: color,border-color .2s linear;
+li a,
+p a
+{
+    transition: color,border-color .2s linear;
+
+    color: $primary-color;
+    border-bottom: 1px solid transparent;
 }
-a, li a, p a {
-  text-decoration: none;
-}
-
-svg {
-  fill: currentColor;
-
-  &:not(:root) { overflow: hidden }
-}
-
-.icon {
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  vertical-align: middle;
-
-  // svg { fill: #000 }
+a,
+li a,
+p a
+{
+    text-decoration: none;
 }
 
-.icon--gray {
-  color: #ddd;
+svg
+{
+    fill: currentColor;
+
+    &:not(:root)
+    {
+        overflow: hidden;
+    }
+}
+
+img
+{
+    width: auto;
+    max-width: 100%;
+    height: auto;
+
+    vertical-align: middle;
+
+    &:not([src])
+    {
+        visibility: hidden;
+    }
+}
+
+figure
+{
+    margin: 0;
+}
+
+.icon
+{
+    display: inline-block;
+
+    width: 20px;
+    height: 20px;
+
+    vertical-align: middle;
+
+    // svg { fill: #000 }
+}
+
+.icon--gray
+{
+    color: #ddd;
 }
