--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -1,10 +1,14 @@
-.menu {
-  padding: 0;
+.menu
+{
+    padding: 0;
 }
 
 // topics
-.menu-topics {
-  line-height: 1.5;
-  color: $primary-color;
-  margin: 15px 0;
+.menu-topics
+{
+    line-height: 1.5;
+
+    margin: 15px 0;
+
+    color: $primary-color;
 }
