--- a/src/scss/layout/_wrapper.scss
+++ b/src/scss/layout/_wrapper.scss
@@ -1,39 +1,50 @@
-.content-wrap {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  //
-  margin-left: 0;
-  margin-right: auto;
+.content-wrap
+{
+    // display: flex;
+    // flex-direction: column;
+    position: relative;
 
-  @media #{$md-and-up} {
-    flex-direction: row
-  }
+    margin-right: auto;
+    //
+    margin-left: 0;
+
+    @extend %flex;
+    @extend %flex-direction-column;
+
+    @media #{$md-and-up}
+    {
+        flex-direction: row;
+    }
 }
 
 // content
-.content {
-  width: 90%;
-  margin-left: 5%;
-  min-height: 80%;
-  position: relative;
+.content
+{
+    position: relative;
 
-  @media #{$md-and-up} {
-    flex: 0 1 auto;
-    margin-left: 30px;
-    max-width: calc(100vw - 380px);
-  }
+    width: 90%;
+    min-height: 80%;
+    margin-left: 5%;
 
-  @media #{$lg-and-up} {
-    margin-left: 210px;
-    width: calc(100vw - 210px - 360px);
-    margin-top: 0;
-  }
+    @media #{$md-and-up}
+    {
+        flex: 0 1 auto;
 
-  @media #{$xl-and-up} {
-    margin-left: 250px;
-    width: calc(100vw - 250px - 360px);
-    max-width: 1390px;
-  }
+        max-width: calc(100vw - 380px);
+        margin-left: 30px;
+    }
 
+    @media #{$lg-and-up}
+    {
+        width: calc(100vw - 210px - 360px);
+        margin-top: 0;
+        margin-left: 210px;
+    }
+
+    @media #{$xl-and-up}
+    {
+        width: calc(100vw - 250px - 360px);
+        max-width: 1390px;
+        margin-left: 250px;
+    }
 }
