--- a/src/scss/abstracts/_placeholders.scss
+++ b/src/scss/abstracts/_placeholders.scss
@@ -1,30 +1,17 @@
-%primary-font
-{
-    font-family: $primary-font;
+%primary-font { font-family: $primary-font }
+
+%u-absolute0 {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 // flexbox
-%flex
-{
-    display: flex;
-}
-%flex-align-items-center
-{
-    align-items: center;
-}
-%flex-direction-column
-{
-    flex-direction: column;
-}
-%flex-direction-row
-{
-    flex-direction: row;
-}
-%flex-direction-wrap
-{
-    flex-direction: wrap;
-}
-%flex-justify-content-center
-{
-    justify-content: center;
-}
+%flex { display: flex }
+%flex-align-items-center { align-items: center }
+%flex-direction-column { flex-direction: column }
+%flex-direction-row { flex-direction: row }
+%flex-direction-wrap { flex-direction: wrap }
+%flex-justify-content-center { justify-content: center }
