--- a/src/scss/components/_story.scss
+++ b/src/scss/components/_story.scss
@@ -1,44 +1,76 @@
-.primary-post
-{
-    &-title
-    {
-        font-size: 28px;
-        font-size: 1.75rem;
-        font-weight: 900;
-        line-height: 1;
-
-        margin: 0 0 10px;
-
-        letter-spacing: -.05em;
-
-        a
-        {
-            color: inherit;
-        }
-    }
-}
-
 // Meta
-.u-meta
-{
-    font-size: 1.125rem;
-    font-weight: 700;
+.u-meta {
+  font-size: 1.125rem;
+  font-weight: 700;
+  margin: 5px 0;
+  color: #333;
 
-    margin: 5px 0;
-
-    color: #333;
-
-    @extend %primary-font;
+  @extend %primary-font;
 }
 
-@media #{$md-and-up}
-{
-    .primary-post
-    {
-        &-title
-        {
-            font-size: 2.5rem;
-            line-height: 1.1;
-        }
+// Primary post Home
+.primary-post {
+  &:hover { opacity: .7; }
+
+  &-title {
+    font-size: 28px;
+    font-size: 1.75rem;
+    font-weight: 900;
+    line-height: 1;
+    margin: 0 0 10px;
+    letter-spacing: -0.05em;
+
+    a { color: inherit }
+  }
+
+  &-figure {
+    height: 350px;
+  }
+}
+
+// Mini Post Home
+
+.mini-post {
+  margin-bottom: 1em;
+  border-bottom: 1px solid #ddd;
+  opacity: 1;
+  transition: opacity .15s linear;
+
+  &:hover { opacity: .7; }
+
+  &-title {
+    font-size: 1.125rem;
+    margin-top: 0;
+    margin-bottom: .25em;
+    font-weight: 800;
+    line-height: 1.11;
+    letter-spacing: -.7px;
+    color: #000;
+
+    a { color: #000 }
+  }
+}
+
+@media #{$md-and-up} {
+  .primary-post {
+    &-title {
+      font-size: 3rem;
+      line-height: 1.1;
     }
+  }
+}
+
+@media #{$lg-and-up} {
+  .mini-post-title {
+    font-size: 1.25rem;
+    margin-bottom: .3em;
+    line-height: 1.05;
+    letter-spacing: -.5px;
+  }
+}
+
+@media #{$xl-and-up} {
+  .mini-post-title {
+    font-size: 1.875rem;
+  }
 }
