--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -38,10 +38,10 @@
 
     .logo
     {
-        font-size: 1.5rem;;
+        font-size: 1.5rem;
         line-height: 1;
 
-        display: block;
+        display: block;;
     }
 }
 
