--- a/index.hbs
+++ b/index.hbs
@@ -53,6 +53,9 @@ into the {body} of the default.hbs template --}}
             </div>
         </div>
     </div>
+
+    {{!-- Sidebar --}}
+    {{> "sidebar/sidebar-home-top"}}
 </div>
 
 {{!-- Loop Story partials/loop.hbs --}}
