--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -2,7 +2,7 @@
     <div class="content">
         {{!-- Title For Home Page --}}
         {{#is "home"}}
-            <h2 class="rimary-home--title">{{t "The Latest"}}</h2>
+            <h2 class="rimay-home--title u-fontSize22">{{t "The Latest"}}</h2>
         {{/is}}
 
         <div class="story-feed">
