--- a/partials/sidebar/sidebar.hbs
+++ b/partials/sidebar/sidebar.hbs
@@ -1,3 +1,7 @@
-<aside class="rimary-sidebar">
-    <h2>Hello Im Sidebar</h2>
+<aside class="rimary-sidebar sidebar u-flexColumnTop">
+    <div class="sticky-bottom-wrap u-flexColumnTop u-flexEnd u-flex-1">
+        <div class="sticky">
+            <h3>hello Im sidebar sticky bottom</h3>
+        </div>
+    </div>
 </aside>
