--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $primary-color: #00a562;
 
 // fonts
 $primary-font: 'Source Sans Pro', sans-serif;
+$secundary-font: Helvetica Neue, Helvetica, Arial, sans-serif;
 
 // Media Query Ranges
 // ==========================================================================
