--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,104 +2,91 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 
-.header
-{
-    display: block;
+.header {
+  display: block;
 }
 
-.desktop-nav
-{
-    // height: calc(100% - 40px);
-    position: fixed;
-    z-index: 30;
-    top: 0;
-    right: 0;
-    bottom: 0;
+.desktop-nav {
+  // height: calc(100% - 40px);
+  position: fixed;
+  z-index: 30;
+  top: 0;
+  right: 0;
+  bottom: 0;
 
-    overflow: hidden;
-    overflow-y: auto;
-    // letter-spacing: -.02em;
+  overflow: hidden;
+  overflow-y: auto;
+  // letter-spacing: -.02em;
 
-    width: 290px;
-    padding: 50px 20px 0;
+  width: 290px;
+  padding: 50px 20px 0;
 
+  word-wrap: break-word;
+  hyphens: auto;
+  // justify-content: space-between;
+
+  background: #fff;
+
+  a {
+    text-decoration: none;
+
+    color: inherit;
+  }
+
+  .logo {
+    font-size: 1.5rem;
+    line-height: 1;
+
+    display: block;
+  }
+}
+
+.desktop-nav {
+  .main-menu {
+    font-size: 1.125rem;
+    line-height: 1.1;
+
+    // letter-spacing: -0.02em;
     word-wrap: break-word;
     hyphens: auto;
-    // justify-content: space-between;
+    // font-weight: 300;
 
-    background: #fff;
+    color: #777;
 
-    a
-    {
-        text-decoration: none;
-
-        color: inherit;
+    .menu-item {
+      padding: 0.2em 0;
     }
+  }
 
-    .logo
-    {
-        font-size: 1.5rem;
-        line-height: 1;
+  a:hover {
+    color: $primary-color;
+    border-bottom-color: transparent;
+  }
 
-        display: block;;
+  //  search
+  .search-field {
+    font-size: 1.1rem;
+    font-weight: 600;
+
+    .icon--search {
+      width: 1em;
     }
+  }
 }
 
-.desktop-nav
-{
-    .main-menu
-    {
-        font-size: 1.125rem;
-        line-height: 1.1;
+@media #{$lg-and-up} {
+  .desktop-nav {
+    top: 0;
+    left: 0;
 
-        letter-spacing: -.02em;
-        word-wrap: break-word;
-        hyphens: auto;
-        // font-weight: 300;
+    width: 210px;
+    padding-top: 30px;
+    padding-left: 30px;
 
-        color: #777;
+    background: 0 0;
 
-        .menu-item
-        {
-            padding: .2em 0;
-        }
+    .main-menu {
+      font-size: 2.57vh;
     }
-
-    a:hover
-    {
-        color: $primary-color;
-        border-bottom-color: transparent;
-    }
-
-    //  search
-    .search-field
-    {
-        font-size: 1.1rem;
-        font-weight: 600;
-
-        .icon--search
-        {
-            width: 1em;
-        }
-    }
-}
-
-@media #{$lg-and-up}
-{
-    .desktop-nav
-    {
-        top: 0;
-        left: 0;
-
-        width: 210px;
-        padding-top: 30px;
-        padding-left: 30px;
-
-        background: 0 0;
-
-        .main-menu
-        {
-            font-size: 2.57vh;
-        }
-    }
+  }
 }
