--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,8 @@
 
     {{!-- Styles --}}
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600,700,900&display=swap" rel="stylesheet">
+    {{!-- <link href="https://fonts.googleapis.com/css?family=Paytone+One|Rokkitt:400,500&display=swap" rel="stylesheet"> --}}
+
     <link rel="stylesheet" type="text/css" href="{{asset "styles/main.css"}}"/>
 
     {{!-- This tag outputs SEO meta+structured data and other important settings --}}
