--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,9 +41,9 @@
 // components
 // --------------------------------------------------
 
-// @import 'components/buttons';
+@import 'components/buttons';
 // @import 'components/navigation';
-// @import 'components/pagination';
+@import 'components/pagination';
 // @import 'components/subscribe';
 // @import 'components/koenig';
 @import 'components/story';
